--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,14 +19,6 @@ jobs:
           file: src/main/resources/fabric.mod.json
           field: version
           value: ${{ github.event.release.tag_name }}
-
-      - name: Set Paper Version
-        uses: fjogeleit/yaml-update-action@main
-        with:
-          valueFile: 'src/main/resources/plugin.yml'
-          propertyPath: 'version'
-          value: ${{ github.event.release.tag_name }}
-          commitChange: false
       
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
@@ -34,12 +26,12 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew build
 
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v4
-        if: success()
-        with:
-          fail_on_failure: true
-          report_paths: '**/build/test-results/test/TEST-*.xml'
+      #- name: Publish Test Report
+      #  uses: mikepenz/action-junit-report@v4
+      #  if: success()
+      #  with:
+      #    fail_on_failure: true
+      #    report_paths: '**/build/test-results/test/TEST-*.xml'
 
       - name: Rename File
         run: |
