velocity + postgres coming in hot

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ minecraft_version=1.21
 yarn_mappings=1.21+build.7
 loader_version=0.15.11
 
-adventure_version=5.12.0
+velocity_version=3.3.0-SNAPSHOT
+adventure_version=5.14.0
 
 # Mod Properties
 maven_group=mrnavastar
@@ -17,6 +18,8 @@ archives_base_name=sqlib
 sqlite_version=3.46.0.0
 # https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
 mariadb_version=3.4.0
+# https://github.com/pgjdbc/pgjdbc/releases
+postgres_version=42.7.3
 # https://central.sonatype.com/artifact/com.zaxxer/HikariCP
 hikari_version=5.1.0
 # https://github.com/FasterXML/jackson-dataformats-text
