--- a/gradle.properties
+++ b/gradle.properties
@@ -14,13 +14,15 @@ maven_group=mrnavastar
 archives_base_name=sqlib
 
 # Dependencies
+# https://central.sonatype.com/artifact/com.zaxxer/HikariCP
+hikari_version=5.1.0
+# https://github.com/zsoltherpai/fluent-jdbc
+jdbi_version=3.45.2-SNAPSHOT
 # https://github.com/xerial/sqlite-jdbc/releases
 sqlite_version=3.46.0.0
 # https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
 mariadb_version=3.4.0
 # https://github.com/pgjdbc/pgjdbc/releases
 postgres_version=42.7.3
-# https://central.sonatype.com/artifact/com.zaxxer/HikariCP
-hikari_version=5.1.0
 # https://github.com/FasterXML/jackson-dataformats-text
 jackson_version=2.17.2
