get ready for beta release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Rename File
         run: |
-          mv ${{ github.workspace }}/build/libs/sqlib.jar ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}.jar; 
+          mv ${{ github.workspace }}/build/libs/sqlib-all.jar ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}.jar; 
           mv ${{ github.workspace }}/build/libs/sqlib-javadoc.jar ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}-javadoc.jar;
           mv ${{ github.workspace }}/build/libs/sqlib-sources.jar ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}-sources.jar;
 
@@ -48,24 +48,6 @@ jobs:
             ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}.jar
             ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}-javadoc.jar
             ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}-sources.jar
-          java: 17
+          java: 21
           game-versions: |
-            1.21
-            1.20.6
-            1.20.5
-            1.20.4
-            1.20.3
-            1.20.2
-            1.20.1
-            1.20
-            1.19.4
-            1.19.3
-            1.19.2
-            1.19.1
-            1.19
-            1.18.2
-            1.18.1
-            1.18
-            1.17.1
-            1.17
-            1.16.5
+            >=1.16.5
