--- a/build.gradle
+++ b/build.gradle
@@ -76,8 +76,9 @@ shadowJar {
     archiveBaseName.set('sqlib')
     configurations = [project.configurations.shadow]
 
-    relocate 'com.fasterxml', 'me.mrnavastar.sqlib.libs.com.fasterxml'
-    relocate 'com.zaxxer', 'me.mrnavastar.sqlib.libs.com.zaxxer'
+    relocate 'com', 'me.mrnavastar.sqlib.libs.com'
+    relocate 'io', 'me.mrnavastar.sqlib.libs.io'
+    relocate 'waffle', 'me.mrnavastar.sqlib.libs.waffle'
     relocate 'org.jdbi', 'me.mrnavastar.sqlib.libs.org.jdbi'
 
     dependencies {
