make version actually be set in velocity

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,13 +12,11 @@ jobs:
         with:
           distribution: temurin
           java-version: 21
-      
-      - name: Set Fabric Version
-        uses: jossef/action-set-json-field@v2.2
-        with:
-          file: src/main/resources/fabric.mod.json
-          field: version
-          value: ${{ github.event.release.tag_name }}
+
+      - name: Set Version
+        run: |
+          sed -i 's/debug-build/${{ github.event.release.tag_name }}/g' src/main/resources/fabric.mod.json
+          sed -i 's/debug-build/${{ github.event.release.tag_name }}/g' src/main/java/me/mrnavastar/sqlib/Velcity.java
       
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
@@ -26,14 +24,7 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew build
 
-      #- name: Publish Test Report
-      #  uses: mikepenz/action-junit-report@v4
-      #  if: success()
-      #  with:
-      #    fail_on_failure: true
-      #    report_paths: '**/build/test-results/test/TEST-*.xml'
-
-      - name: Rename File
+      - name: Rename Files
         run: |
           mv ${{ github.workspace }}/build/libs/sqlib-all.jar ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}.jar; 
           mv ${{ github.workspace }}/build/libs/sqlib-javadoc.jar ${{ github.workspace }}/sqlib-${{ github.event.release.tag_name }}-javadoc.jar;
