--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'fabric-loom' version '1.7-SNAPSHOT'
+    id "xyz.jpenilla.run-velocity" version "2.3.0"
     id "io.github.goooler.shadow" version "8.1.8"
     id 'io.freefair.lombok' version '8.6'
 }
@@ -123,5 +124,11 @@ sourcesJar {
 jar {
     from("LICENSE") {
         rename { "${it}_${project.archivesBaseName}" }
+    }
+}
+
+tasks {
+    runVelocity {
+        velocityVersion(project.velocity_version)
     }
 }
