--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ yarn_mappings=1.21+build.7
 loader_version=0.16.0
 fabric_version=0.100.7+1.21
 
+velocity_version=3.3.0-SNAPSHOT
 adventure_version=5.14.0
 
 # Mod Properties
