--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     // Quilt
     modCompileOnly "org.quiltmc:quilt-loader:0.27.1"
+    //Velocity
+    compileOnly 'com.velocitypowered:velocity-api:3.4.0-SNAPSHOT'
+    annotationProcessor 'com.velocitypowered:velocity-api:3.4.0-SNAPSHOT'
     // Adventure
     modImplementation "net.kyori:adventure-platform-fabric:${project.adventure_version}"
     // Config
